[package]
name = "repoyank"
version = "0.3.0"
edition = "2024"
authors = ["Tim Koornstra"]
description = "Interactively traverse your repository, select files/directories, and quickly prepare structured snippets for LLM interactions."
license = "GPL-3.0-or-later"
repository = "https://github.com/TimKoornstra/repoyank"
readme = "README.md"
keywords = ["clipboard", "code-snippets", "llm", "repository", "cli"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
walkdir = "2.4"
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
anyhow = "1.0"
glob = "0.3.2"
